Add safeArgs and navigation

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,25 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="32dp"
     >
-  <androidx.appcompat.widget.AppCompatEditText
-      android:id="@+id/editText"
+
+  <fragment
+      android:id="@+id/main_nav_host"
+      android:name="androidx.navigation.fragment.NavHostFragment"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:hint="github id:"
-      android:inputType="textPersonName"
-      android:maxLines="1"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
+      android:layout_height="match_parent"
+      app:defaultNavHost="true"
+      app:navGraph="@navigation/main_navigation"
       />
-  <androidx.appcompat.widget.AppCompatButton
-      android:id="@+id/button"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="GET REPOSITORY"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
