--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,7 +7,7 @@
     android:padding="32dp"
     >
   <androidx.appcompat.widget.AppCompatEditText
-      android:id="@+id/editText"
+      android:id="@+id/appCompatEditText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="github id:"
